--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -1,6 +1,6 @@
 :root {
   --primary: #8c2b4a;
-  --secondary: #7a38fe;
+  --secondary: #12ac6e;
   --dark: #343b55;
   --black: #070b26;
   --gray: #aeb1c0;
