--- a/src/partials/layouts/project-box.html
+++ b/src/partials/layouts/project-box.html
@@ -12,7 +12,7 @@
       </div>
       <div class="project-box_body">
         <p class="app-meta mb-1">
-          <span> {{ loadSvg('calendar-alt.svg') }} منذ يومين</span>
+          <span> <i class="hgi-stroke hgi-calendar-alt"></i> منذ يومين</span>
           <span> {{ loadSvg('view.svg') }}15 مشاهدة</span>
         </p>
         <h6 class="project-box_title">
@@ -20,7 +20,7 @@
         </h6>
         <p class="app-meta project-box_location">
           <span
-            >{{ loadSvg('map-marker-alt.svg') }}
+            ><i class="hgi-stroke hgi-map-marker-alt"></i>  
             <span class="app-text-ellipsis">السعودية, منطقة الرياض, الرياض,
             القادسيةالسعودية, منطقة الرياض, الرياض,
             القادسية</span
