--- a/src/assets/scss/_global.scss
+++ b/src/assets/scss/_global.scss
@@ -1,9 +1,11 @@
 html {
   font-size: 16px;
+
   @media screen and (max-width: 768px) {
     font-size: 14px;
   }
 }
+
 body {
   font-family: "Tajawal", sans-serif;
   font-size: 1rem;
@@ -13,13 +15,20 @@ body {
 }
 
 a {
-  color: var(--primary);
+  color: var(--secondary);
   transition: 0.3s ease;
+  text-decoration: none;
 }
+
+.hgi-stroke {
+  vertical-align: middle;
+}
+
 img {
   max-width: 100%;
   height: auto;
 }
+
 h1 {
   font-weight: 800;
   font-size: 2.125rem;
@@ -43,8 +52,9 @@ h6 {
   color: var(--dark);
 }
 
-h1,.h1{
-  font-size: clamp(2rem, 5vw,3rem);
+h1,
+.h1 {
+  font-size: clamp(2rem, 5vw, 3rem);
   font-weight: 900;
 }
 
@@ -63,7 +73,9 @@ hr {
   border-top: 1px solid var(--gray2);
   opacity: 1;
 }
+
 @media (min-width: 1400px) {
+
   .container,
   .container-lg,
   .container-md,
@@ -73,31 +85,27 @@ hr {
     max-width: 1440px;
   }
 }
+
 .btn {
   font-weight: 600;
-  font-size: 1.125rem; 
-  padding: 12px 32px;
+  font-size: 1.125rem;
+  padding: .75rem 2rem;
   border-radius: 50px;
   display: inline-flex;
   justify-content: center;
-  align-items: center;
- 
-  box-shadow: 0 0 2px #000;
-  .app-icon {
-    --size: 18px;
-  }
+  align-items: center; 
 }
+
 .btn-sm {
-  font-size: .875rem;
-  font-weight: 500;
-  height: 38px;
-  border-radius: var(--border-radius);
-  padding: 0 15px;
+  font-size: .875rem; 
+  border-radius: 50px;
+  padding: 8px 1.25rem;
 }
 
 .btn-primary {
   background-color: var(--primary);
   border: 1px solid var(--primary);
+
   &:hover {
     color: var(--primary);
     background-color: #fff;
@@ -109,6 +117,7 @@ hr {
   background-color: #fff;
   color: var(--primary);
   border: 1px solid var(--primary);
+
   &:hover {
     color: #fff;
     background-color: var(--primary);
@@ -119,16 +128,19 @@ hr {
 .btn-secondary {
   background-color: var(--secondary);
   border: 1px solid var(--secondary);
+
   &:hover {
     color: var(--secondary);
     background-color: #fff;
     border-color: var(--secondary);
   }
 }
+
 .btn-outline-secondary {
   background-color: #fff;
   color: var(--secondary);
   border: 1px solid var(--secondary);
+
   &:hover {
     color: #fff;
     background-color: var(--secondary);
@@ -163,6 +175,7 @@ textarea.form-control {
   width: var(--size, 14px);
   height: var(--size, 14px);
   vertical-align: middle;
+
   svg {
     max-width: 100%;
     max-height: var(--size, 14px);
@@ -178,6 +191,7 @@ textarea.form-control {
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   background-color: #fff;
   border: 1px solid var(--gray2);
+
   &-title {
     border-bottom: 1px solid var(--gray2);
     padding-bottom: 10px;
@@ -186,13 +200,15 @@ textarea.form-control {
 }
 
 .app-meta {
-  > span {
+  >span {
     font-size: .875rem;
     display: inline-flex;
     align-items: center;
+
     &:not(:last-child) {
       margin-left: 15px;
     }
+
     .app-icon {
       --size: 18px;
       margin-left: 5px;
@@ -204,6 +220,7 @@ textarea.form-control {
 .bg-light {
   background-color: var(--bg-gray) !important;
 }
+
 .bg-primary {
   background-color: var(--primary) !important;
 }
@@ -213,12 +230,13 @@ textarea.form-control {
 }
 
 .section-title {
-  text-align: center;
   margin-bottom: 30px;
+
   h2 {
     color: var(--primary);
     margin-bottom: 0;
   }
+
   p {
     font-weight: 700;
     font-size: 1.125rem;
