--- a/src/assets/scss/_home.scss
+++ b/src/assets/scss/_home.scss
@@ -1,83 +1,102 @@
-/* Hero Section */
-.slideshow-section {
-  position: relative;
+ /* Hero Section */
+ .slideshow-section {
+   position: relative;
 
-  @media screen and (max-width: 992px) {
-    text-align: center;
-  }
+   @media screen and (max-width: 992px) {
+     text-align: center;
+   }
 
-  .slide {
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+   .swiper-button-prev,
+   .swiper-button-next {
+     --swiper-navigation-sides-offset: 30px;
+   }
 
-    .slide-wrap {
-      background: linear-gradient(to bottom, rgba(0, 0, 0, 0.1) 0%, rgba(0, 0, 0, 0.92) 100%);
-      min-height: calc(100vh - 98px);
-      display: flex;
-      align-items: center;
-     &_content{
-      max-width: 700px;
+   .slide {
+     background-position: center;
+     background-repeat: no-repeat;
+     background-size: cover;
+
+     .slide-wrap {
+       background: linear-gradient(to bottom, rgba(0, 0, 0, 0.1) 0%, rgba(0, 0, 0, 0.92) 100%);
+       min-height: calc(100vh - 98px);
+       display: flex;
+       align-items: center;
+
+       &_content {
+         max-width: 700px;
+       }
      }
-    }
 
-    h2 {
-      color: #fff;
-      margin-bottom: 0;
-      
-    }
+     h2 {
+       color: #fff;
+       margin-bottom: 0;
 
-    p {
-      font-size: 20px;
-      color: #fff;
-      font-weight: 500; 
-    }
+     }
 
-  }
-}
+     p {
+       font-size: 20px;
+       color: #fff;
+       font-weight: 500;
+     }
 
-/* banner-slideshow */
-.banner-slideshow {
-  padding: 60px 0 40px;
+   }
+ }
 
-  .swiper-slide {
-    img {
-      width: 100%;
-      max-height: 285px;
-      object-fit: cover;
-    }
-  }
-}
+ /* banner-slideshow */
+ .banner-slideshow {
+   padding: 60px 0 40px;
 
-/* Featured Projects */
-.featured-projects {
-  padding: 60px 0;
+   .swiper-slide {
+     img {
+       width: 100%;
+       max-height: 285px;
+       object-fit: cover;
+     }
+   }
+ }
 
-  .swiper {
-    padding: 15px 0;
-  }
-}
+ /* Featured Projects */
+ .featured-courses {
+   padding: 60px 0;
+   background: linear-gradient(to left, #E5FFF3 0%, #e0f1ff 30%, #FDF2EF 100%);;
+   .swiper {
+     padding: 15px 0;
+   }
+ }
 
-/* Partners Section */
-.partners-section {
-  padding: 60px 0;
+ /* Partners Section */
+ .partners-section {
+   padding: 60px 0 80px;
 
-  .swiper-slide {
-    text-align: center;
-  }
+   .swiper-slide {
+     text-align: center;
+     height: auto;
+     padding: 0 15px;
+   }
 
-  .partner-logo {
-    height: 75px;
-    object-fit: contain;
-  }
+   .partner-logo {
+     width: 100%;
+     display: block;
+     height: 100%;
+     max-height: 100px;
+     box-shadow: 0 0 5px rgba(0, 0, 0, 0.0784313725); 
+     padding: 12px;
+     margin: 2px 0 5px;
+     border-radius: 8px;
 
-  .app-swiper-container .swiper-pagination {
-    --swiper-pagination-bottom: -20px;
-  }
-}
+     img {
+       object-fit: contain;
+       width: 100%;
+       height: 100%;
+     }
 
-.feature {
-  img {
-    max-width: 90px;
-  }
-}
+   }
+
+   .app-swiper-container {
+     padding-bottom: 10px;
+
+     .swiper-pagination {
+       --swiper-pagination-bottom: -25px;
+     }
+   }
+ }
