--- a/src/assets/scss/_swiper.scss
+++ b/src/assets/scss/_swiper.scss
@@ -1,37 +1,47 @@
 .app-swiper-container {
-  position: relative; 
+  position: relative;
   --swiper-theme-color: var(--primary);
- 
+
   .swiper-wrapper {
     height: auto;
   }
+
   @media screen and (max-width: 767px) {
     padding: 0 10px;
   }
 
   .swiper-button-prev,
   .swiper-button-next {
-    --swiper-navigation-size: 12px;
-    --swiper-navigation-sides-offset: 30px;
+    --swiper-navigation-size: 45px;
+    --swiper-navigation-sides-offset: -45px;
     position: absolute;
     width: 45px;
-    height: 45px;
+
+    &::after {
+      --swiper-navigation-size: 15px;
+
+    }
+
     background-color: #fff;
     color: var(--primary);
     box-shadow: 0 0 5px #00000014;
     border-radius: 50%;
+
     @media screen and (max-width: 992px) {
       --swiper-navigation-sides-offset: 20px;
     }
+
     @media screen and (max-width: 767px) {
       --swiper-navigation-sides-offset: 0;
     }
-     @media screen and (max-width:450px) {
+
+    @media screen and (max-width:450px) {
       --swiper-navigation-sides-offset: 0;
-       width: 30px;
-    height: 30px;
+      width: 30px;
+      height: 30px;
     }
   }
+
   .swiper-pagination {
     --swiper-pagination-bullet-size: 12px;
     --swiper-pagination-bottom: 0;
