--- a/src/partials/layouts/footer.html
+++ b/src/partials/layouts/footer.html
@@ -1,37 +1,46 @@
-    <!-- Footer -->
-    <footer class="app-footer">
-      <div class="container">
-        <div class="app-footer-top">
-          <div class="row align-items-center">
-            <div class="col-lg-6 text-lg-start text-center mb-3 mb-lg-0">
-              <a href="./index.html" class="logo"><img loading="lazy" src="/assets/images/logo.png" alt="" /></a>
-            </div>
-            <div class="col-lg-6">
-              <ul class="nav justify-content-center justify-content-lg-end">
-                @@loop('link-item.html', '../../data/links-footer.json');
-              </ul>
-            </div>
-          </div>
+<!-- Footer -->
+<footer class="app-footer">
+  <div class="app-footer_map">
+    <iframe
+      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3827.123456789!2d44.223196!3d17.548214!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMTfCsDMyJzUzLjYiTiA0NMKwMTMnMjMuNSJF!5e0!3m2!1sar!2ssa!4v1642000000000!5m2!1sar!2ssa"
+      height="250" style="border: 0;
+  width: 100%;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+  </div>
+  <div class="app-footer-top">
+    <div class="container">
+      <div class="row align-items-center">
+        <div class="col-lg-6 text-lg-start text-center mb-3 mb-lg-0">
+          <a href="./index.html" class="logo"><img loading="lazy" src="/assets/images/logo.png" alt="" /></a>
         </div>
-        <div class="app-footer-bottom">
-          <div class="row align-items-center">
-            <div class="col-lg-6 text-lg-start text-center mb-3 mb-lg-0">
-              <p class="copy-right mb-0">© 2024 - ريلتي ستيشنز جميع الحقوق محفوظة</p>
-            </div>
-            <div class="col-lg-6 text-lg-end text-center">
-              <div class="social-links">
-                <a href="#">{{ loadSvg('facebook-f.svg')}}</a>
-                <a href="#">{{ loadSvg('twitter.svg')}}</a>
-                <a href="#">{{ loadSvg('instagram.svg')}}</a>
-                <a href="#">{{ loadSvg('linkedin-in.svg')}}</a>
-                <a href="#">{{ loadSvg('whatsapp.svg')}}</a>
-              </div>
-            </div>
+        <div class="col-lg-6">
+          <ul class="nav justify-content-center justify-content-lg-end">
+            @@loop('link-item.html', '../../data/links-footer.json')
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="app-footer-bottom">
+    <div class="container">
+      <div class="row align-items-center">
+        <div class="col-lg-6 text-lg-start text-center mb-3 mb-lg-0">
+          <p class="copy-right mb-0">© {{ currentYear() }} - {{title}}</p>
+        </div>
+        <div class="col-lg-6 text-lg-end text-center">
+          <div class="social-links">
+            <a href="#"><i class="hgi-stroke hgi-facebook-01"></i></a>
+            <a href="#"><i class="hgi-stroke hgi-twitter"></i></a>
+            <a href="#"><i class="hgi-stroke hgi-instagram"></i></a>
+            <a href="#"><i class="hgi-stroke hgi-linkedin"></i></a>
+            <a href="#"><i class="hgi-stroke hgi-whatsapp"></i></a>
           </div>
         </div>
       </div>
-    </footer>
-   </div>
-    <script type="module" src="/main.js"></script>
-  </body>
+    </div>
+  </div>
+</footer>
+</div>
+<script type="module" src="/main.js"></script>
+</body>
+
 </html>
