--- a/src/partials/sections/partners.html
+++ b/src/partials/sections/partners.html
@@ -1,74 +1,49 @@
-<section class="partners-section {{ clasess }}">
+<section class="partners-section {{ classes }}">
   <div class="container">
-    <div class="section-title">
-      <h2>{{ title }}</h2>
-      <p>نساعد في تمهيد الطريق معاً كفريق واحد</p>
-    </div>
+    @@if(title) {
+      <div class="section-title">
+        <h2>{{ title }}</h2>
+        <p>نساعد في تمهيد الطريق معاً كفريق واحد</p>
+      </div>
+    }
+
     <div class="app-swiper-container">
-      <div class="container mb-4">
+      <div class="container">
         <div class="swiper">
           <div class="swiper-wrapper">
             <div class="swiper-slide">
-              <a href="./company.html">
-                <img
-                  src="assets/images/logos/logo-1.png"
-                  alt="Partner 1"
-                  class="partner-logo"
-                />
+              <a href="./company.html" class="partner-logo" >
+                <img src="assets/images/logos/logo-1.png" alt="Partner 1"/>
               </a>
             </div>
             <div class="swiper-slide">
-              <a href="./company.html">
-                <img
-                  src="assets/images/logos/logo-2.png"
-                  alt="Partner 2"
-                  class="partner-logo"
-                />
+              <a href="./company.html" class="partner-logo" >
+                <img src="assets/images/logos/logo-2.png" alt="Partner 2"/>
               </a>
             </div>
             <div class="swiper-slide">
-              <a href="./company.html">
-                <img
-                  src="assets/images/logos/logo-3.png"
-                  alt="Partner 3"
-                  class="partner-logo"
-                />
+              <a href="./company.html" class="partner-logo" >
+                <img src="assets/images/logos/logo-3.png" alt="Partner 3"/>
               </a>
             </div>
             <div class="swiper-slide">
-              <a href="./company.html">
-                <img
-                  src="assets/images/logos/logo-4.png"
-                  alt="Partner 4"
-                  class="partner-logo"
-                />
+              <a href="./company.html" class="partner-logo" >
+                <img src="assets/images/logos/logo-4.png" alt="Partner 4"/>
               </a>
             </div>
             <div class="swiper-slide">
-              <a href="./company.html">
-                <img
-                  src="assets/images/logos/logo-5.png"
-                  alt="Partner 4"
-                  class="partner-logo"
-                />
+              <a href="./company.html" class="partner-logo" >
+                <img src="assets/images/logos/logo-5.png" alt="Partner 4"/>
               </a>
             </div>
             <div class="swiper-slide">
-              <a href="./company.html">
-                <img
-                  src="assets/images/logos/logo-6.png"
-                  alt="Partner 4"
-                  class="partner-logo"
-                />
+              <a href="./company.html" class="partner-logo" >
+                <img src="assets/images/logos/logo-6.png" alt="Partner 4"/>
               </a>
             </div>
             <div class="swiper-slide">
-              <a href="./company.html">
-                <img
-                  src="assets/images/logos/logo-7.png"
-                  alt="Partner 4"
-                  class="partner-logo"
-                />
+              <a href="./company.html" class="partner-logo" >
+                <img src="assets/images/logos/logo-7.png" alt="Partner 4"/>
               </a>
             </div>
           </div>
