--- a/src/partials/sections/partners.html
+++ b/src/partials/sections/partners.html
@@ -12,38 +12,58 @@
         <div class="swiper">
           <div class="swiper-wrapper">
             <div class="swiper-slide">
-              <a href="./company.html" class="partner-logo" >
-                <img src="assets/images/logos/logo-1.png" alt="Partner 1"/>
+              <a href="#" class="partner-logo" >
+                <img src="assets/images/partners/partner1.png" alt="Partner 1"/>
               </a>
             </div>
             <div class="swiper-slide">
-              <a href="./company.html" class="partner-logo" >
-                <img src="assets/images/logos/logo-2.png" alt="Partner 2"/>
+              <a href="#" class="partner-logo" >
+                <img src="assets/images/partners/partner2.png" alt="Partner 2"/>
               </a>
             </div>
             <div class="swiper-slide">
-              <a href="./company.html" class="partner-logo" >
-                <img src="assets/images/logos/logo-3.png" alt="Partner 3"/>
+              <a href="#" class="partner-logo" >
+                <img src="assets/images/partners/partner3.png" alt="Partner 3"/>
               </a>
             </div>
             <div class="swiper-slide">
-              <a href="./company.html" class="partner-logo" >
-                <img src="assets/images/logos/logo-4.png" alt="Partner 4"/>
+              <a href="#" class="partner-logo" >
+                <img src="assets/images/partners/partner4.png" alt="Partner 4"/>
               </a>
             </div>
             <div class="swiper-slide">
-              <a href="./company.html" class="partner-logo" >
-                <img src="assets/images/logos/logo-5.png" alt="Partner 4"/>
+              <a href="#" class="partner-logo" >
+                <img src="assets/images/partners/partner5.png" alt="Partner 4"/>
               </a>
             </div>
             <div class="swiper-slide">
-              <a href="./company.html" class="partner-logo" >
-                <img src="assets/images/logos/logo-6.png" alt="Partner 4"/>
+              <a href="#" class="partner-logo" >
+                <img src="assets/images/partners/partner6.png" alt="Partner 4"/>
               </a>
             </div>
             <div class="swiper-slide">
-              <a href="./company.html" class="partner-logo" >
-                <img src="assets/images/logos/logo-7.png" alt="Partner 4"/>
+              <a href="#" class="partner-logo" >
+                <img src="assets/images/partners/partner7.png" alt="Partner 4"/>
+              </a>
+            </div>
+            <div class="swiper-slide">
+              <a href="#" class="partner-logo" >
+                <img src="assets/images/partners/partner8.png" alt="Partner 4"/>
+              </a>
+            </div>
+            <div class="swiper-slide">
+              <a href="#" class="partner-logo" >
+                <img src="assets/images/partners/partner9.png" alt="Partner 4"/>
+              </a>
+            </div>
+            <div class="swiper-slide">
+              <a href="#" class="partner-logo" >
+                <img src="assets/images/partners/partner10.png" alt="Partner 4"/>
+              </a>
+            </div>
+            <div class="swiper-slide">
+              <a href="#" class="partner-logo" >
+                <img src="assets/images/partners/partner11.png" alt="Partner 4"/>
               </a>
             </div>
           </div>
