--- a/src/assets/scss/_global.scss
+++ b/src/assets/scss/_global.scss
@@ -61,7 +61,7 @@ h1,
 p {
   margin-bottom: 16px;
   line-height: 1.6;
-  color: var(--dark);
+  color: #666666;
   font-size: 1rem;
   font-weight: 400;
 }
@@ -75,7 +75,6 @@ hr {
 }
 
 @media (min-width: 1400px) {
-
   .container,
   .container-lg,
   .container-md,
@@ -87,17 +86,17 @@ hr {
 }
 
 .btn {
-  font-weight: 600;
-  font-size: 1.125rem;
-  padding: .75rem 2rem;
+  font-weight: 500;
+  font-size: 18px;
+  padding: 0.625rem 1.75rem;
   border-radius: 50px;
   display: inline-flex;
   justify-content: center;
-  align-items: center; 
+  align-items: center;
 }
 
 .btn-sm {
-  font-size: .875rem; 
+  font-size: 0.875rem;
   border-radius: 50px;
   padding: 8px 1.25rem;
 }
@@ -105,6 +104,8 @@ hr {
 .btn-primary {
   background-color: var(--primary);
   border: 1px solid var(--primary);
+  --bs-btn-active-bg: var(--primary);
+  --bs-btn-active-border-color: var(--primary);
 
   &:hover {
     color: var(--primary);
@@ -168,29 +169,12 @@ textarea.form-control {
   border-color: var(--primary);
 }
 
-.app-icon {
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
-  width: var(--size, 14px);
-  height: var(--size, 14px);
-  vertical-align: middle;
-
-  svg {
-    max-width: 100%;
-    max-height: var(--size, 14px);
-    height: auto;
-    fill: currentColor;
-  }
-}
-
 .app-card {
-  padding: 1.25rem;
+  padding: 40px;
   border-radius: var(--border-radius);
   overflow: hidden;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  background-color: #fff;
-  border: 1px solid var(--gray2);
+  background: var(--white);
+  box-shadow: 0px 15px 40px -10px rgb(109 117 143 / 33%);
 
   &-title {
     border-bottom: 1px solid var(--gray2);
@@ -200,8 +184,8 @@ textarea.form-control {
 }
 
 .app-meta {
-  >span {
-    font-size: .875rem;
+  > span {
+    font-size: 0.875rem;
     display: inline-flex;
     align-items: center;
 
@@ -246,4 +230,9 @@ textarea.form-control {
 
 .breadcrumb {
   margin-bottom: 0;
+}
+
+.accordion-button:not(.collapsed) {
+  --bs-accordion-active-color: var(--primary);
+  --bs-accordion-active-bg: var(--bg-gray);
 }
