--- a/src/assets/scss/_header.scss
+++ b/src/assets/scss/_header.scss
@@ -6,24 +6,24 @@
   left: 0;
   z-index: 99;
   background-color: #fff;
-  box-shadow: 0 0 10px 0px #8c8c8c61;
-  border-top: 8px solid var(--primary);
+  box-shadow: 0 0 0.625rem 0rem #8c8c8c61;
+  border-top: 0.5rem solid var(--primary);
 
   .navbar {
-    padding: 10px 0;
+    padding: 0.625rem 0;
 
     &-brand {
-      margin-left: 35px;
+      margin-left: 2.1875rem;
 
       img {
-        height: 60px;
+        height: 3.75rem;
       }
     }
 
     .navbar-toggler {
       padding: 0;
       border: none;
-      font-size: 22px;
+      font-size: 1.375rem;
       color: var(--primary);
       outline: none;
       box-shadow: none;
@@ -31,12 +31,12 @@
 
     .nav-item {
       &:not(:last-child) {
-        margin-left: 15px;
+        margin-left: 0.9375rem;
       }
     }
 
     .nav-link {
-      font-size: 1rem;
+      font-size: 16px;
       font-weight: 500;
       color: var(--black);
 
@@ -47,32 +47,32 @@
 
     .logo-other {
       img {
-        width: 60px;
-        height: 60px;
+        width: 3.75rem;
+        height: 3.75rem;
         object-fit: cover;
       }
     }
 
     .login-link {
-      margin-inline-start: 20px;
+      margin-inline-start: 1.25rem;
       font-weight: 600;
-      font-size: 1.125rem; 
+      font-size: 18px;
     }
 
-    @media (max-width: 991px) {
+    @media (max-width: 61.9375rem) {
       .nav-item {
         margin-left: 0 !important;
 
         &:last-child {
           .nav-link {
-            border-bottom: 1px solid var(--gray2);
+            border-bottom: 0.0625rem solid var(--gray2);
           }
         }
       }
 
       .nav-link {
-        padding: 14px 0;
-        border-top: 1px solid var(--gray2);
+        padding: 0.875rem 0;
+        border-top: 0.0625rem solid var(--gray2);
       }
 
       .navbar-collapse {
@@ -80,7 +80,7 @@
       }
 
       .navbar-nav {
-        padding: 20px 0;
+        padding: 1.25rem 0;
       }
     }
   }
@@ -88,6 +88,20 @@
 
 .hero-page {
   background-color: #fff;
-  border-bottom: 1px solid var(--gray2);
-  padding: 16px 0;
+  padding: 6.25rem 0;
+  background: linear-gradient(to left, #e5fff3 0%, #e0f1ff 30%, #fdf2ef 100%);
+  text-align: center;
+  .breadcrumb {
+    justify-content: center;
+    li {
+      font-size: 18px;
+      font-weight: 500;
+    }
+    a {
+      i {
+        margin-inline-end: 5px;
+        font-weight: 600;
+      }
+    }
+  }
 }
