--- a/src/partials/layouts/header.html
+++ b/src/partials/layouts/header.html
@@ -44,23 +44,10 @@
                   alt="Tcw Logo" /></a>
               <a href="#" class="logo-other"><img loading="lazy" src="https://tcw.com.sa/asstes/img/h_logo-01.png"
                   alt="Tcw Logo" /></a>
-              <a href="#" class="login-link"><i class="hgi-stroke hgi-user"></i> تسجيل دخول</a>
+              <a href="./login.html" class="login-link"><i class="hgi-stroke hgi-user"></i> تسجيل دخول</a>
             </div>
           </div>
         </div>
       </nav>
     </header>
-
-    <!-- Modal -->
-    <div class="modal fade" id="modalSignin" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
-      aria-labelledby="mapSearchLabel" aria-hidden="true">
-      <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable modal-md">
-        <div class="modal-content rounded-4 shadow">
-          <div class="modal-header p-4">
-            <h1 class="modal-title fs-5" id="modalSigninLabel">تسجيل دخول</h1>
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-          </div>
-          <div class="modal-body p-4">@@include('./login-form.html');</div>
-        </div>
-      </div>
-    </div>
+ 
