--- a/src/partials/layouts/hero.html
+++ b/src/partials/layouts/hero.html
@@ -1,20 +1,13 @@
 <div class="hero-page">
   <div class="container">
-    <div class="d-flex justify-content-between align-items-center">
-      <div class="right">
-        <nav aria-label="breadcrumb">
-          <ol class="breadcrumb py-2 mb-0">
-            <li class="breadcrumb-item">
-              <a href="./index.html">الرئيسية</a>
-            </li>
-            <li class="breadcrumb-item active">{{title}}</li>
-          </ol>
-        </nav>
-        <h1 class="h2 mb-0">{{title}}</h1>
-      </div>
-      <div class="left d-none d-lg-block">
-        <button class="btn btn-outline-primary"  onclick="window.history.back();">رجوع</button>
-      </div>
-    </div>
+    <h1 class="h2">{{title}}</h1>
+    <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
+      <ol class="breadcrumb">
+        <li class="breadcrumb-item">
+          <a href="./index.html"><i class="hgi hgi-stroke hgi-home-11"></i>الرئيسية</a>
+        </li>
+        <li class="breadcrumb-item active">{{title}}</li>
+      </ol>
+    </nav>
   </div>
 </div>
