--- a/src/partials/sections/featured-courses.html
+++ b/src/partials/sections/featured-courses.html
@@ -10,66 +10,59 @@
             class="hgi-stroke hgi-angle-left ms-2"></i></a>
       </div>
     </div>
-    <div class="courses-cates-carousel">
-      <div class="swiper">
-        <div class="swiper-wrapper">
-          <div class="swiper-slide">
-            <div class="course-cate">
-              <div class="course-cate_icon">
-                <i class="hgi hgi-stroke hgi-star-off"></i>
-              </div>
-              <div class="course-cate_content">
-                <h4>التسويق</h4>
-                <span>5 دورات</span>
-              </div>
-            </div>
+    <nav>
+      <div class="nav nav-cate-tabs" id="nav-tab" role="tablist">
+        <button class="course-cate active" data-bs-toggle="tab" data-bs-target="#cate-1-tab" type="button" role="tab"
+          aria-controls="cate-1-tab" aria-selected="true">
+          <div class="course-cate_icon">
+            <i class="hgi hgi-stroke hgi-star-off"></i>
           </div>
-          <div class="swiper-slide">
-            <div class="course-cate">
-              <div class="course-cate_icon">
-                <i class="hgi hgi-stroke hgi-star-off"></i>
-              </div>
-              <div class="course-cate_content">
-                <h4>التسويق</h4>
-                <span>5 دورات</span>
-              </div>
-            </div>
+          <div class="course-cate_content">
+            <h4>التسويق</h4>
+            <span>5 دورات</span>
           </div>
-          <div class="swiper-slide">
-            <div class="course-cate">
-              <div class="course-cate_icon">
-                <i class="hgi hgi-stroke hgi-star-off"></i>
-              </div>
-              <div class="course-cate_content">
-                <h4>التسويق</h4>
-                <span>5 دورات</span>
-              </div>
-            </div>
+        </button>
+        <button class="course-cate" data-bs-toggle="tab" data-bs-target="#cate-2-tab" type="button" role="tab"
+          aria-controls="cate-2-tab" aria-selected="false">
+          <div class="course-cate_icon">
+            <i class="hgi hgi-stroke hgi-star-off"></i>
           </div>
-          <div class="swiper-slide">
-            <div class="course-cate">
-              <div class="course-cate_icon">
-                <i class="hgi hgi-stroke hgi-star-off"></i>
-              </div>
-              <div class="course-cate_content">
-                <h4>التسويق</h4>
-                <span>5 دورات</span>
+          <div class="course-cate_content">
+            <h4>التسويق</h4>
+            <span>5 دورات</span>
+          </div>
+        </button>
+      </div>
+    </nav>
+
+    <div class="tab-content" id="nav-tabContent">
+      <div class="tab-pane fade show active" id="cate-1-tab" role="tabpanel" aria-labelledby="cate-1-tab" tabindex="0">
+        <div class="courses-carousel" id="courses-1">
+          <div class="app-swiper-container">
+            <div class="swiper">
+              <div class="swiper-wrapper">
+                @@loop('../layouts/course-slide.html', '../../data/data.json')
               </div>
             </div>
+            <div class="swiper-button-prev"></div>
+            <div class="swiper-button-next"></div>
+          </div>
+        </div>
+      </div>
+      <div class="tab-pane fade" id="cate-2-tab" role="tabpanel" aria-labelledby="cate-2-tab" tabindex="0">
+        <div class="courses-carousel" id="courses-2">
+          <div class="app-swiper-container">
+            <div class="swiper">
+              <div class="swiper-wrapper">
+                @@loop('../layouts/course-slide.html', '../../data/data.json')
+              </div>
+            </div>
+            <div class="swiper-button-prev"></div>
+            <div class="swiper-button-next"></div>
           </div>
         </div>
       </div>
     </div>
-    <div class="courses-carousel">
-      <div class="app-swiper-container">
-        <div class="swiper">
-          <div class="swiper-wrapper">
-            @@loop('../layouts/course-slide.html', '../../data/data.json')
-          </div>
-        </div>
-        <div class="swiper-button-prev"></div>
-        <div class="swiper-button-next"></div>
-      </div>
-    </div>
+
   </div>
 </section>
