--- a/src/assets/scss/_global.scss
+++ b/src/assets/scss/_global.scss
@@ -26,6 +26,7 @@ a {
 
 img {
   max-width: 100%;
+
   height: auto;
 }
 
@@ -48,7 +49,7 @@ h4,
 h5,
 h6 {
   font-weight: 700;
-  line-height: 1.7;
+  line-height: 1.5;
   color: var(--dark);
 }
 
@@ -87,18 +88,24 @@ hr {
 
 .btn {
   font-weight: 500;
-  font-size: 18px;
+  font-size: 1.125rem;
   padding: 0.625rem 1.75rem;
-  border-radius: 50px;
+  border-radius: 3.125rem;
   display: inline-flex;
   justify-content: center;
   align-items: center;
+  @media screen and (max-width: 768px) {
+    padding: 0.625rem 1.75rem;
+  }
+  i {
+    margin-inline-end: 5px;
+  }
 }
 
 .btn-sm {
   font-size: 0.875rem;
   border-radius: 50px;
-  padding: 8px 1.25rem;
+  padding: 0.5rem 1.25rem;
 }
 
 .btn-primary {
@@ -170,12 +177,14 @@ textarea.form-control {
 }
 
 .app-card {
-  padding: 40px;
+  padding: 2.5rem;
   border-radius: var(--border-radius);
   overflow: hidden;
   background: var(--white);
-  box-shadow: 0px 15px 40px -10px rgb(109 117 143 / 33%);
-
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  @media screen and (max-width: 768px) {
+    padding: 1.5625rem;
+  }
   &-title {
     border-bottom: 1px solid var(--gray2);
     padding-bottom: 10px;
