--- a/src/assets/scss/_home.scss
+++ b/src/assets/scss/_home.scss
@@ -5,17 +5,27 @@
   @media screen and (max-width: 992px) {
     text-align: center;
   }
-  
- 
-@media screen and (max-width: 767px) {
+
+  @media screen and (max-width: 767px) {
     .app-swiper-container {
-        padding: 0 ;
+      padding: 0;
     }
-}
+  }
 
   .swiper-button-prev,
   .swiper-button-next {
     --swiper-navigation-sides-offset: 30px;
+    @media screen and (max-width: 992px) {
+      --swiper-navigation-sides-offset: 0;
+    }
+    @media screen and (max-width: 767px) {
+      display: none;
+    }
+  }
+  .swiper-pagination {
+    --swiper-pagination-bottom: 15px;
+    --swiper-pagination-bullet-inactive-color: #fff;
+    --swiper-pagination-bullet-inactive-opacity: 1;
   }
 
   .slide {
@@ -32,6 +42,10 @@
       min-height: calc(100vh - 98px);
       display: flex;
       align-items: center;
+      padding: 80px 0;
+      @media screen and (max-width: 767px) {
+        min-height: calc(50vh - 85px);
+      }
 
       &_content {
         max-width: 700px;
@@ -44,9 +58,11 @@
     }
 
     p {
-      font-size: 20px;
+      font-size: 1.25rem;
       color: #fff;
       font-weight: 500;
+      margin: 20px 0 35px;
+      opacity: 0.8;
     }
   }
 }
@@ -142,7 +158,10 @@
   .swiper-slide {
     text-align: center;
     height: auto;
-    padding: 0 15px;
+    padding: 2px 15px 6px;
+    @media screen and (max-width: 767px) {
+      padding: 2px 10px 6px;
+    }
   }
 
   .partner-logo {
