--- a/src/assets/scss/_swiper.scss
+++ b/src/assets/scss/_swiper.scss
@@ -7,7 +7,7 @@
   }
 
   @media screen and (max-width: 767px) {
-    padding: 0 10px;
+    // padding: 0 10px;
   }
 
   .swiper-button-prev,
@@ -25,11 +25,6 @@
     color: var(--primary);
     box-shadow: 0 0 5px #00000014;
     border-radius: 50%;
-
-    @media screen and (max-width: 992px) {
-      --swiper-navigation-sides-offset: 20px;
-    }
-
     @media screen and (max-width: 767px) {
       --swiper-navigation-sides-offset: 0;
     }
@@ -42,8 +37,7 @@
   }
 
   .swiper-pagination {
-    --swiper-pagination-bullet-size: 12px;
-    --swiper-pagination-bottom: 0;
-    --swiper-pagination-bullet-horizontal-gap: 7px;
+    --swiper-pagination-bullet-size: 10px;
+    --swiper-pagination-bullet-horizontal-gap: 4px;
   }
 }
