--- a/src/partials/sections/hero-home.html
+++ b/src/partials/sections/hero-home.html
@@ -54,6 +54,7 @@
           </div>
         </div>
       </div>
+      <div class="swiper-pagination"></div>
     </div>
     <div class="swiper-button-prev"></div>
     <div class="swiper-button-next"></div>
