refactor(assets): update image references and category icons

--- a/src/partials/sections/featured-courses.html
+++ b/src/partials/sections/featured-courses.html
@@ -14,7 +14,7 @@
         <button class="course-cate active" data-bs-toggle="tab" data-bs-target="#cate-1-tab" type="button" role="tab"
           aria-controls="cate-1-tab" aria-selected="true">
           <div class="course-cate_icon">
-            <i class="hgi hgi-stroke hgi-star-off"></i>
+            <i class="hgi hgi-stroke hgi-analytics-02"></i>
           </div>
           <div class="course-cate_content">
             <h4>التسويق</h4>
@@ -24,7 +24,7 @@
         <button class="course-cate" data-bs-toggle="tab" data-bs-target="#cate-2-tab" type="button" role="tab"
           aria-controls="cate-2-tab" aria-selected="false">
           <div class="course-cate_icon">
-            <i class="hgi hgi-stroke hgi-star-off"></i>
+            <i class="hgi hgi-stroke hgi-laptop-programming"></i>
           </div>
           <div class="course-cate_content">
             <h4>البرمجة</h4>
@@ -34,7 +34,7 @@
         <button class="course-cate" data-bs-toggle="tab" data-bs-target="#cate-3-tab" type="button" role="tab"
           aria-controls="cate-3-tab" aria-selected="false">
           <div class="course-cate_icon">
-            <i class="hgi hgi-stroke hgi-star-off"></i>
+            <i class="hgi hgi-stroke hgi-web-design-01"></i>
           </div>
           <div class="course-cate_content">
             <h4>التصميم</h4>
@@ -44,7 +44,7 @@
         <button class="course-cate" data-bs-toggle="tab" data-bs-target="#cate-4-tab" type="button" role="tab"
           aria-controls="cate-4-tab" aria-selected="false">
           <div class="course-cate_icon">
-            <i class="hgi hgi-stroke hgi-star-off"></i>
+            <i class="hgi hgi-stroke hgi-translate"></i>
           </div>
           <div class="course-cate_content">
             <h4>الترجمة</h4>
