--- a/src/partials/layouts/header.html
+++ b/src/partials/layouts/header.html
@@ -13,14 +13,14 @@
 
 <body>
   <div id="app" class="app">
-    <!-- <div id="app-loader" class="app-loader">
-        <div class="app-loader-content">
-          <div class="logo">
-            <img loading="lazy" src="assets/images/favicon.png" alt="" />
-          </div>
-          <div class="loader"></div>
+    <div id="app-loader" class="app-loader">
+      <div class="app-loader-content">
+        <div class="logo">
+          <img loading="lazy" src="assets/images/favicon.png" alt="" />
         </div>
-      </div> -->
+        <div class="loader"></div>
+      </div>
+    </div>
 
 
     <header class="app-header">
@@ -50,4 +50,3 @@
         </div>
       </nav>
     </header>
- 
